tests/baselines/reference/instanceQuery-0001.errors.txt
instanceQuery-0001.ts(18,5): error TS2322: Type 'ArrayBuffer' is not assignable to type 'instanceof ArrayBuffer'.
instanceQuery-0001.ts(32,18): error TS2345: Argument of type 'ArrayBuffer' is not assignable to parameter of type 'instanceof ArrayBuffer'.


==== instanceQuery-0001.ts (2 errors) ====
    namespace instof000 {}
    
    namespace instof0002 {
        let a: instanceof ArrayBuffer | undefined;
        let b = new ArrayBuffer(0); // should have type instanceof ArrayBuffer
        a;b;
        a = b;
    }
    namespace instof0003 {
        let a: ArrayBuffer | undefined;
        let b = new ArrayBuffer(0); // should have type instanceof ArrayBuffer
        a;b;
        a = b;
    }
    namespace instof0003 {
        declare let a: ArrayBuffer;
        let b = new ArrayBuffer(0); // should have type instanceof ArrayBuffer
        b = a ; // should Error
        ~
!!! error TS2322: Type 'ArrayBuffer' is not assignable to type 'instanceof ArrayBuffer'.
    }
    namespace instof005 {
        declare let a: ArrayBuffer;
        let b: ArrayBuffer = new ArrayBuffer(0);
        b = a ; // should not Error
    }
    
    namespace instof006 {
    
        declare function safeDataView(buffer: instanceof ArrayBuffer): DataView;
        safeDataView(new ArrayBuffer(0)); // no error expected
    
        declare let a: ArrayBuffer;
        safeDataView(a); // error expected
                     ~
!!! error TS2345: Argument of type 'ArrayBuffer' is not assignable to parameter of type 'instanceof ArrayBuffer'.
    
    }